Fix header on mobiles

--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -74,7 +74,7 @@ body
         margin: 0
 
     div:not(.h, .shiza)
-        padding: 20px !important
+        padding: 20px
         padding-bottom: 0 !important
 
         h1
@@ -179,11 +179,9 @@ ul.projects
     background: #F0994D !important
 
 .h
-    // background: url(https://i.ytimg.com/vi/e-6eWEhjMa4/maxresdefault.jpg) !important
-    // background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/6/65/Flag_of_Germany_%281867%E2%80%931919%29.svg/1200px-Flag_of_Germany_%281867%E2%80%931919%29.svg.png) !important
     background-image: url(/dubass.png)
     background-size: cover
-    padding: 0
+    padding: 0 !important
 
     h1
         padding: 20px
@@ -386,7 +384,6 @@ blockquote
         font-weight: 500
         color: #2f374f
 
-
 @media screen and (min-width: 1px) and (max-width: 720px)
     ul.projects li a
         width: calc(100% - 40px)
@@ -412,5 +409,8 @@ blockquote
             h1
                 padding: 20px 80px 20px 80px !important
                 margin: 0
+
+.h
+    padding: 0 !important
 
 @import "etc/dark"
